--- a/Atividades/StoryCards/index.html
+++ b/Atividades/StoryCards/index.html
@@ -66,13 +66,13 @@
 
         // Função para identificar Level, Unit e fase atual pelo URL
         function getParamsFromURL() {
-    const urlParams = new URLSearchParams(window.location.search);
-    const level = urlParams.get('level'); // Obtém o 'level' do URL
-    const unit = urlParams.get('unit');  // Obtém o 'unit' do URL
-    const fase = urlParams.get('fase');  // Obtém o 'fase' do URL
-    console.log("URL Parameters - Level:", level, "Unit:", unit, "Fase:", fase); // Debug
-    return { level, unit, fase };
-}
+            const urlParams = new URLSearchParams(window.location.search);
+            const level = urlParams.get('level'); // Obtém o 'level' do URL
+            const unit = urlParams.get('unit');  // Obtém o 'unit' do URL
+            const fase = urlParams.get('fase');  // Obtém o 'fase' do URL
+            console.log("URL Parameters - Level:", level, "Unit:", unit, "Fase:", fase); // Debug
+            return { level, unit, fase };
+        }
 
         // Função para salvar progresso no Firebase com todas as regras
         async function salvarProgressoAluno(uid, fase) {
@@ -103,98 +103,98 @@
         }
 
         async function loadContent() {
-    const { level, unit } = getParamsFromURL();
+            const { level, unit } = getParamsFromURL();
 
-    if (!level || !unit) {
-        console.error("Level or Unit is missing in the URL parameters.");
-        return [];
-    }
+            if (!level || !unit) {
+                console.error("Level or Unit is missing in the URL parameters.");
+                return [];
+            }
 
-    // Construir o caminho dinâmico
-    const dataStoryPath = `../../${level}/${unit}/DataStory/`;
-    console.log("Generated DataStory Path:", dataStoryPath); // Debug
+            // Construir o caminho dinâmico
+            const dataStoryPath = `../../${level}/${unit}/DataStory/`;
+            console.log("Generated DataStory Path:", dataStoryPath); // Debug
 
-    try {
-        const response = await fetch(`${dataStoryPath}images.txt`);
-        if (!response.ok) throw new Error(`Failed to fetch images.txt from ${dataStoryPath}`);
-        
-        const text = await response.text();
-        console.log("Fetched Content:", text); // Debug
+            try {
+                const response = await fetch(`${dataStoryPath}images.txt`);
+                if (!response.ok) throw new Error(`Failed to fetch images.txt from ${dataStoryPath}`);
+                
+                const text = await response.text();
+                console.log("Fetched Content:", text); // Debug
 
-        const lines = text.split('\n');
+                const lines = text.split('\n');
 
-        let cards = [];
-        let currentImage = '';
-        let currentText = '';
+                let cards = [];
+                let currentImage = '';
+                let currentText = '';
 
-        lines.forEach(line => {
-            if (line.startsWith('#imagem')) {
+                lines.forEach(line => {
+                    if (line.startsWith('#imagem')) {
+                        if (currentImage && currentText) {
+                            cards.push({ image: currentImage, text: currentText });
+                        }
+                        currentImage = line.replace('#', '').trim();
+                        currentText = '';
+                    } else {
+                        currentText += line + ' ';
+                    }
+                });
+
                 if (currentImage && currentText) {
                     cards.push({ image: currentImage, text: currentText });
                 }
-                currentImage = line.replace('#', '').trim();
-                currentText = '';
-            } else {
-                currentText += line + ' ';
-            }
-        });
 
-        if (currentImage && currentText) {
-            cards.push({ image: currentImage, text: currentText });
+                storyText = cards.map(card => card.text).join('\n\n');
+
+                // Atualiza os caminhos das imagens
+                cards = cards.map(card => ({
+                    ...card,
+                    image: `${dataStoryPath}images/${card.image}.png`
+                }));
+
+                console.log("Final Cards Data:", cards); // Debug
+                return cards;
+            } catch (error) {
+                console.error("Error loading content:", error);
+                return [];
+            }
         }
 
-        storyText = cards.map(card => card.text).join('\n\n');
-
-        // Atualiza os caminhos das imagens
-        cards = cards.map(card => ({
-            ...card,
-           image: `${dataStoryPath}images/${card.image}.png`
-        }));
-
-        console.log("Final Cards Data:", cards); // Debug
-        return cards;
-    } catch (error) {
-        console.error("Error loading content:", error);
-        return [];
-    }
-}
-
         function displayCard(index) {
-    const container = document.getElementById('cardsContainer');
-    container.innerHTML = '';
-    const cardData = cardsData[index];
-    const cardElement = document.createElement('div');
-    cardElement.className = 'card active';
-    cardElement.onclick = () => toggleView(); // Alternar entre texto e imagem
+            const container = document.getElementById('cardsContainer');
+            container.innerHTML = '';
+            const cardData = cardsData[index];
+            const cardElement = document.createElement('div');
+            cardElement.className = 'card active';
+            cardElement.onclick = () => toggleView(); // Alternar entre texto e imagem
 
-    if (showText) {
-        cardElement.innerHTML = `<div class="card-text"><p>${cardData.text}</p></div>`;
-    } else {
-        cardElement.innerHTML = `<img src="${cardData.image}" alt="Image">`;
-    }
+            if (showText) {
+                cardElement.innerHTML = `<div class="card-text"><p>${cardData.text}</p></div>`;
+            } else {
+                cardElement.innerHTML = `<img src="${cardData.image}" alt="Image">`;
+            }
 
-    const businessmanImage = document.createElement('img');
-    businessmanImage.src = 'businessman.png';
-    businessmanImage.className = 'businessman';
-    businessmanImage.onclick = (event) => {
-        event.stopPropagation(); // Impede o clique no card de alternar
-        toggleSpeech(cardData.text, businessmanImage, index);
-    };
+            const businessmanImage = document.createElement('img');
+            businessmanImage.src = 'businessman.png';
+            businessmanImage.className = 'businessman';
+            businessmanImage.onclick = (event) => {
+                event.stopPropagation(); // Impede o clique no card de alternar
+                toggleSpeech(cardData.text, businessmanImage, index);
+            };
 
-    cardElement.appendChild(businessmanImage);
-    container.appendChild(cardElement);
+            cardElement.appendChild(businessmanImage);
+            container.appendChild(cardElement);
 
-    // Marcar o cartão como visualizado
-    if (!viewedCards.has(index)) {
-        console.log(`Card ${index + 1} marked as viewed.`);
-        viewedCards.add(index);
-    }
-    checkCompletion();
+            // Marcar o cartão como visualizado
+            if (!viewedCards.has(index)) {
+                console.log(`Card ${index + 1} marked as viewed.`);
+                viewedCards.add(index);
+            }
+            checkCompletion();
 
-    // Atualiza botões de navegação
-    document.getElementById('prevBtn').style.display = (index === 0) ? 'none' : 'block';
-    document.getElementById('nextBtn').style.display = (index === cardsData.length - 1) ? 'none' : 'block';
-}
+            // Atualiza botões de navegação
+            document.getElementById('prevBtn').style.display = (index === 0) ? 'none' : 'block';
+            document.getElementById('nextBtn').style.display = (index === cardsData.length - 1) ? 'none' : 'block';
+        }
 
         function toggleView() {
             showText = !showText;
@@ -214,54 +214,54 @@
             displayCard(currentCardIndex);
         }
 
-       document.addEventListener("DOMContentLoaded", () => {
-    const backButton = document.querySelector("button#backButton");
-    if (backButton) {
-        backButton.addEventListener("click", handleBackButtonClick);
-    }
-});
-
-async function handleBackButtonClick() {
-    const { level, unit } = getParamsFromURL();
-
-    if (!level || !unit) {
-        alert("Level or Unit not identified in the URL.");
-        return;
-    }
-
-    firebase.auth().onAuthStateChanged(async (user) => {
-        if (user) {
-            const uid = user.uid;
-            const isPhaseCompleted = await checkPhaseProgress(uid, level, unit);
-
-            if (isPhaseCompleted) {
-                console.log("Phase completed. Navigating back.");
-                window.history.back(); // Retorna à página anterior
-            } else {
-                const confirmExit = confirm(
-                    "The next phase is not completed. Do you wish to leave anyway?"
-                );
-                if (confirmExit) {
-                    console.log("User chose to leave without completing the phase. Navigating back.");
-                    window.history.back(); // Retorna à página anterior
-                }
+        document.addEventListener("DOMContentLoaded", () => {
+            const backButton = document.querySelector("button#backButton");
+            if (backButton) {
+                backButton.addEventListener("click", handleBackButtonClick);
             }
-        } else {
-            alert("Please log in to save your progress and continue.");
-        }
-    });
-}
+        });
 
-async function checkPhaseProgress(uid, level, unit) {
-    try {
-        const dbRef = firebase.database().ref(`usuarios/${uid}/progresso/${level}/${unit}/fase2`);
-        const snapshot = await dbRef.once("value");
-        return snapshot.val();
-    } catch (error) {
-        console.error("Error checking phase progress:", error);
-        return false;
-    }
-}
+        async function handleBackButtonClick() {
+            const { level, unit } = getParamsFromURL();
+
+            if (!level || !unit) {
+                alert("Level or Unit not identified in the URL.");
+                return;
+            }
+
+            firebase.auth().onAuthStateChanged(async (user) => {
+                if (user) {
+                    const uid = user.uid;
+                    const isPhaseCompleted = await checkPhaseProgress(uid, level, unit);
+
+                    if (isPhaseCompleted) {
+                        console.log("Phase completed. Navigating back.");
+                        window.history.back(); // Retorna à página anterior
+                    } else {
+                        const confirmExit = confirm(
+                            "The next phase is not completed. Do you wish to leave anyway?"
+                        );
+                        if (confirmExit) {
+                            console.log("User chose to leave without completing the phase. Navigating back.");
+                            window.history.back(); // Retorna à página anterior
+                        }
+                    }
+                } else {
+                    alert("Please log in to save your progress and continue.");
+                }
+            });
+        }
+
+        async function checkPhaseProgress(uid, level, unit) {
+            try {
+                const dbRef = firebase.database().ref(`usuarios/${uid}/progresso/${level}/${unit}/fase2`);
+                const snapshot = await dbRef.once("value");
+                return snapshot.val();
+            } catch (error) {
+                console.error("Error checking phase progress:", error);
+                return false;
+            }
+        }
     </script>
 
     <style>
@@ -333,14 +333,17 @@ async function checkPhaseProgress(uid, level, unit) {
             color: #333;
             margin: 0;
         }
+
+        /* Aqui está o ajuste para não cobrir o texto */
         .businessman {
             position: absolute;
-            top: 10px;
+            bottom: 10px;  /* Alterado para base do card */
             right: 10px;
-            width: 90px;
-            height: 90px;
+            width: 60px;   /* Reduzido para 60px */
+            height: 60px;  /* Reduzido para 60px */
             cursor: pointer;
         }
+
         button {
             margin: 20px;
             padding: 15px 30px;
@@ -426,85 +429,85 @@ async function checkPhaseProgress(uid, level, unit) {
             doc.save("story.pdf"); // Salva o PDF com o nome 'story.pdf'
         }
 
-     function toggleSpeech(text, buttonElement, index) {
-    if (!('speechSynthesis' in window)) {
-        alert("Your browser does not support speech synthesis. Please enable it or use a compatible browser.");
-        return;
-    }
-
-    if (window.speechSynthesis.speaking) {
-        window.speechSynthesis.cancel();
-        console.log("Speech synthesis stopped.");
-        buttonElement.src = 'businessman.png';
-    } else {
-        let voices = window.speechSynthesis.getVoices();
-        let usVoice = voices.find(voice => voice.lang === 'en-US');
-
-        if (!usVoice && voices.length === 0) {
-            window.speechSynthesis.onvoiceschanged = () => {
-                voices = window.speechSynthesis.getVoices();
-                usVoice = voices.find(voice => voice.lang === 'en-US');
-
-                if (!usVoice && !alertDisplayed) {
-                    alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice of your synthesizer will be used, which may cause problems with reading.");
-                    alertDisplayed = true; // Marca o alerta como exibido
-                }
-
-                if (usVoice) {
-                    speakText(text, usVoice, buttonElement, index);
-                } else {
-                    speakText(text, voices[0], buttonElement, index);
-                }
-            };
-        } else {
-            if (!usVoice && !alertDisplayed) {
-                alert("No 'en-US' voice found. Using default voice instead.");
-                alertDisplayed = true; // Marca o alerta como exibido
+        function toggleSpeech(text, buttonElement, index) {
+            if (!('speechSynthesis' in window)) {
+                alert("Your browser does not support speech synthesis. Please enable it or use a compatible browser.");
+                return;
             }
-            if (usVoice) {
-                speakText(text, usVoice, buttonElement, index);
+
+            if (window.speechSynthesis.speaking) {
+                window.speechSynthesis.cancel();
+                console.log("Speech synthesis stopped.");
+                buttonElement.src = 'businessman.png';
             } else {
-                speakText(text, voices[0], buttonElement, index);
+                let voices = window.speechSynthesis.getVoices();
+                let usVoice = voices.find(voice => voice.lang === 'en-US');
+
+                if (!usVoice && voices.length === 0) {
+                    window.speechSynthesis.onvoiceschanged = () => {
+                        voices = window.speechSynthesis.getVoices();
+                        usVoice = voices.find(voice => voice.lang === 'en-US');
+
+                        if (!usVoice && !alertDisplayed) {
+                            alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice of your synthesizer will be used, which may cause problems with reading.");
+                            alertDisplayed = true; // Marca o alerta como exibido
+                        }
+
+                        if (usVoice) {
+                            speakText(text, usVoice, buttonElement, index);
+                        } else {
+                            speakText(text, voices[0], buttonElement, index);
+                        }
+                    };
+                } else {
+                    if (!usVoice && !alertDisplayed) {
+                        alert("No 'en-US' voice found. Using default voice instead.");
+                        alertDisplayed = true; // Marca o alerta como exibido
+                    }
+                    if (usVoice) {
+                        speakText(text, usVoice, buttonElement, index);
+                    } else {
+                        speakText(text, voices[0], buttonElement, index);
+                    }
+                }
+                buttonElement.src = 'pause.png';
             }
         }
-        buttonElement.src = 'pause.png';
-    }
-}
 
-function speakText(text, voice, buttonElement, index) {
-    let utterance = new SpeechSynthesisUtterance(text);
-    utterance.voice = voice;
-    utterance.lang = 'en-US';
-    console.log("Speaking with voice: ", voice.name);
-    window.speechSynthesis.speak(utterance);
-    utterance.onend = () => {
-        buttonElement.src = 'businessman.png';
-        spokenCards.add(index); // Marca o cartão como ouvido
-        checkCompletion();
-    };
-}
-
-function checkCompletion() {
-    console.log("Checking completion...");
-    console.log(`Viewed cards: ${viewedCards.size}/${cardsData.length}`);
-    console.log(`Spoken cards: ${spokenCards.size}/${cardsData.length}`);
-
-    if (viewedCards.size === cardsData.length && spokenCards.size === cardsData.length) {
-        if (!phaseCompleted) {
-            phaseCompleted = true;
-            console.log("All cards viewed and heard. Phase completed.");
-            firebase.auth().onAuthStateChanged(function(user) {
-                if (user) {
-                    const { fase } = getParamsFromURL();
-                    salvarProgressoAluno(user.uid, fase);
-                    alert("Congratulations! You have completed this phase.");
-                } else {
-                    console.log("User not logged in. Progress not saved.");
-                }
-            });
+        function speakText(text, voice, buttonElement, index) {
+            let utterance = new SpeechSynthesisUtterance(text);
+            utterance.voice = voice;
+            utterance.lang = 'en-US';
+            console.log("Speaking with voice: ", voice.name);
+            window.speechSynthesis.speak(utterance);
+            utterance.onend = () => {
+                buttonElement.src = 'businessman.png';
+                spokenCards.add(index); // Marca o cartão como ouvido
+                checkCompletion();
+            };
         }
-    }
-}
+
+        function checkCompletion() {
+            console.log("Checking completion...");
+            console.log(`Viewed cards: ${viewedCards.size}/${cardsData.length}`);
+            console.log(`Spoken cards: ${spokenCards.size}/${cardsData.length}`);
+
+            if (viewedCards.size === cardsData.length && spokenCards.size === cardsData.length) {
+                if (!phaseCompleted) {
+                    phaseCompleted = true;
+                    console.log("All cards viewed and heard. Phase completed.");
+                    firebase.auth().onAuthStateChanged(function(user) {
+                        if (user) {
+                            const { fase } = getParamsFromURL();
+                            salvarProgressoAluno(user.uid, fase);
+                            alert("Congratulations! You have completed this phase.");
+                        } else {
+                            console.log("User not logged in. Progress not saved.");
+                        }
+                    });
+                }
+            }
+        }
     </script>
 
     <style>
@@ -515,4 +518,3 @@ function checkCompletion() {
     </style>
 </body>
 </html>
-
