--- a/Atividades/StoryCards/index.html
+++ b/Atividades/StoryCards/index.html
@@ -168,7 +168,11 @@
             cardElement.onclick = () => toggleView(); // Alternar entre texto e imagem
 
             if (showText) {
-                cardElement.innerHTML = `<div class="card-text"><p>${cardData.text}</p></div>`;
+                // Adicionamos uma div separada para o texto
+                const textContainer = document.createElement('div');
+                textContainer.className = 'card-text';
+                textContainer.innerHTML = `<p>${cardData.text}</p>`;
+                cardElement.appendChild(textContainer);
             } else {
                 cardElement.innerHTML = `<img src="${cardData.image}" alt="Image">`;
             }
@@ -305,7 +309,6 @@
         .card {
             display: flex;
             flex-direction: column;
-            align-items: center;
             justify-content: center;
             margin: 20px auto;
             padding: 20px 40px 20px 20px;
@@ -317,6 +320,8 @@
             min-height: 100px;
             position: relative;
             text-align: center;
+            /* Garante espaço extra no fundo, para o botão não cobrir o texto */
+            padding-bottom: 120px;
         }
         .active {
             display: flex;
@@ -327,23 +332,20 @@
             border-radius: 10px;
             margin-bottom: 10px;
         }
-        .card p {
+        .card-text p {
             font-size: 1.5em;
             text-align: center;
             color: #333;
             margin: 0;
         }
-
-        /* Aqui está o ajuste para não cobrir o texto */
         .businessman {
             position: absolute;
-            bottom: 10px;  /* Alterado para base do card */
+            bottom: 10px;
             right: 10px;
-            width: 60px;   /* Reduzido para 60px */
-            height: 60px;  /* Reduzido para 60px */
+            width: 60px;
+            height: 60px;
             cursor: pointer;
         }
-
         button {
             margin: 20px;
             padding: 15px 30px;
