--- a/Atividades/MemoryGame/index - Copy.html
+++ b/Atividades/MemoryGame/index - Copy.html
@@ -226,7 +226,7 @@
             authDomain: "hannahenglishcourse.firebaseapp.com",
             databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
             projectId: "hannahenglishcourse",
-            storageBucket: "hannahenglishcourse.appspot.com",
+            storageBucket: "hannahenglishcourse.appspot.com", // Mantenha o valor original aqui
             messagingSenderId: "449818788486",
             appId: "1:449818788486:web:8a49d3f68591e6fb3f0707"
         };
@@ -242,61 +242,61 @@
         let lockBoard = false;
         let matchedPairs = 0;
         let totalPairs = 0;
-        let alertDisplayed = false;
+        let alertDisplayed = false; // Variável global para rastrear se a mensagem já foi exibida
 
-        function getParamsFromURL() {
-            const params = new URLSearchParams(window.location.search);
-            return {
-                level: params.get('level'),
-                unit: params.get('unit'),
-                fase: params.get('fase'),
-            };
-        }
+function getParamsFromURL() {
+    const params = new URLSearchParams(window.location.search);
+    return {
+        level: params.get('level'),
+        unit: params.get('unit'),
+        fase: params.get('fase'),
+    };
+}
 
         function loadCardsData(callback) {
-            const { level, unit } = getParamsFromURL();
-            if (!level || !unit) {
-                console.error("Parâmetros 'level' e 'unit' são obrigatórios na URL.");
-                return;
+    const { level, unit } = getParamsFromURL();
+    if (!level || !unit) {
+        console.error("Parâmetros 'level' e 'unit' são obrigatórios na URL.");
+        return;
+    }
+
+    const wordsPath = `../../${level}/${unit}/data1/words.txt`;
+    const imagePathTemplate = `../../${level}/${unit}/data1/imagens/imagem`;
+
+    fetch(wordsPath)
+        .then(response => {
+            if (!response.ok) {
+                throw new Error(`Erro ao carregar palavras de ${wordsPath}`);
             }
+            return response.text();
+        })
+        .then(text => {
+            const words = text.trim().split('\n');
+            const cardsArray = [];
 
-            const wordsPath = `../../${level}/${unit}/data1/words.txt`;
-            const imagePathTemplate = `../../${level}/${unit}/data1/imagens/imagem`;
+            words.forEach((word, index) => {
+                const imagePath = `${imagePathTemplate}${index + 1}.png`;
 
-            fetch(wordsPath)
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error(`Erro ao carregar palavras de ${wordsPath}`);
-                    }
-                    return response.text();
-                })
-                .then(text => {
-                    const words = text.trim().split('\n');
-                    const cardsArray = [];
-
-                    words.forEach((word, index) => {
-                        const imagePath = `${imagePathTemplate}${index + 1}.png`;
-
-                        cardsArray.push({
-                            type: 'image',
-                            src: imagePath,
-                            pair: `pair${index + 1}`,
-                        });
-
-                        cardsArray.push({
-                            type: 'word',
-                            text: word.trim(),
-                            pair: `pair${index + 1}`,
-                        });
-                    });
-
-                    totalPairs = words.length;
-                    callback(cardsArray);
-                })
-                .catch(error => {
-                    console.error("Erro ao carregar dados:", error);
+                cardsArray.push({
+                    type: 'image',
+                    src: imagePath,
+                    pair: `pair${index + 1}`,
                 });
-        }
+
+                cardsArray.push({
+                    type: 'word',
+                    text: word.trim(),
+                    pair: `pair${index + 1}`,
+                });
+            });
+
+            totalPairs = words.length;
+            callback(cardsArray);
+        })
+        .catch(error => {
+            console.error("Erro ao carregar dados:", error);
+        });
+}
 
         function initGame(cardsArray) {
             gameContainer.innerHTML = '';
@@ -355,25 +355,26 @@
         }
 
         function flipCard() {
-            if (lockBoard) return;
-            if (this.classList.contains('flipped')) return;
+    if (lockBoard) return;
+    if (this.classList.contains('flipped')) return;
 
-            this.classList.add('flipped');
+    this.classList.add('flipped');
 
-            if (this.querySelector('.word')) {
-                const word = this.querySelector('.word').textContent;
-                speakText(word);
-            }
+    // Se a carta tiver uma palavra, use o sintetizador de voz para lê-la
+    if (this.querySelector('.word')) {
+        const word = this.querySelector('.word').textContent;
+        speakText(word);
+    }
 
-            if (!firstCard) {
-                firstCard = this;
-                return;
-            }
+    if (!firstCard) {
+        firstCard = this;
+        return;
+    }
 
-            secondCard = this;
-            updateMoveCounter();
-            checkForMatch();
-        }
+    secondCard = this;
+    updateMoveCounter();
+    checkForMatch();
+}
 
         function checkForMatch() {
             const isMatch = firstCard.dataset.pair === secondCard.dataset.pair;
@@ -441,31 +442,31 @@
             });
         }
 
-        async function updateNextPhase(userId) {
-            console.log("Updating next phase...");
-            const currentPhase = getPhaseFromURL();
-            const { level, unit } = getParamsFromURL();
-            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
+       async function updateNextPhase(userId) {
+    console.log("Updating next phase...");
+    const currentPhase = getPhaseFromURL();
+    const { level, unit } = getParamsFromURL();
+    const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
-            try {
-                if (currentPhase === "last") {
-                    const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-                    console.log(`Unlocking next unit: ${nextUnit}`);
-                    await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
-                } else if (currentPhase === "end") {
-                    const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-                    console.log(`Unlocking next level: ${nextLevel}`);
-                    await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
-                } else {
-                    const nextPhase = parseInt(currentPhase) + 1;
-                    console.log(`Unlocking next phase: fase${nextPhase}`);
-                    await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
-                }
-                console.log("Update successful.");
-            } catch (error) {
-                console.error("Error updating next phase:", error);
-            }
+    try {
+        if (currentPhase === "last") {
+            const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+            console.log(`Unlocking next unit: ${nextUnit}`);
+            await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
+        } else if (currentPhase === "end") {
+            const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+            console.log(`Unlocking next level: ${nextLevel}`);
+            await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
+        } else {
+            const nextPhase = parseInt(currentPhase) + 1;
+            console.log(`Unlocking next phase: fase${nextPhase}`);
+            await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
         }
+        console.log("Update successful.");
+    } catch (error) {
+        console.error("Error updating next phase:", error);
+    }
+}
 
         function getPhaseFromURL() {
             const params = new URLSearchParams(window.location.search);
@@ -478,58 +479,45 @@
             return { level: parts[1], unit: parts[2] };
         }
 
-        async function goBack() {
-            console.log("[DEBUG] Back button clicked");
-            const { level, unit, fase } = getParamsFromURL();
-            console.log("[DEBUG] URL Params:", { level, unit, fase });
+       function goBack() {
+    const { level, unit, fase } = getParamsFromURL();
 
-            if (!level || !unit || !fase) {
-                console.warn("[DEBUG] Missing required parameters in URL, allowing back navigation");
-                window.history.back();
-                return;
-            }
-
-            firebase.auth().onAuthStateChanged(async (user) => {
-                if (!user) {
-                    console.warn("[DEBUG] User not authenticated, allowing back navigation");
-                    window.history.back();
-                    return;
-                }
-
-                console.log("[DEBUG] User authenticated:", user.uid);
-                const nextPhase = `fase${parseInt(fase) + 1}`;
-                console.log("[DEBUG] Checking next phase:", nextPhase);
-
-                try {
-                    const snapshot = await firebase.database()
-                        .ref(`usuarios/${user.uid}/progresso/${level}/${unit}/${nextPhase}`)
-                        .once("value");
-
-                    console.log("[DEBUG] Snapshot value:", snapshot.val());
-
-                    if (snapshot.val() === true) {
-                        console.log("[DEBUG] Next phase is unlocked, allowing back navigation");
-                        window.history.back();
-                    } else {
-                        console.log("[DEBUG] Next phase is locked, showing confirmation");
-                        const confirmExit = confirm(
-                            "The next phase is locked. Do you still want to go back?"
-                        );
-                        if (confirmExit) {
-                            window.history.back();
-                        }
-                    }
-                } catch (error) {
-                    console.error("[DEBUG] Firebase error:", error);
-                    const confirmExit = confirm(
-                        "Could not verify progress. Do you want to go back anyway?"
-                    );
-                    if (confirmExit) {
-                        window.history.back();
-                    }
-                }
-            });
+    // Verifica o usuário autenticado
+    firebase.auth().onAuthStateChanged(function(user) {
+        if (!user) {
+            alert("You need to be logged in to proceed.");
+            return;
         }
+
+        const userId = user.uid;
+        const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
+
+        dbRef.get().then(snapshot => {
+            if (snapshot.exists()) {
+                const progress = snapshot.val();
+                const currentFase = parseInt(fase, 10);
+                const nextFaseKey = `fase${currentFase + 1}`;
+
+                // Verifica se a próxima fase está desbloqueada
+                if (progress[nextFaseKey]) {
+                    window.history.back(); // Volta para a página anterior
+                } else {
+                    const confirmNavigation = confirm(
+                        "The next phase is locked. Do you still want to go back?"
+                    );
+                    if (confirmNavigation) {
+                        window.history.back(); // Volta para a página anterior
+                    }
+                }
+            } else {
+                alert("Could not verify progress. Please try again later.");
+            }
+        }).catch(error => {
+            console.error("Error checking progress:", error);
+            alert("An error occurred while checking progress. Please try again.");
+        });
+    });
+}
 
         function showCompletionModal() {
             overlay.style.display = 'block';
@@ -546,40 +534,49 @@
             loadCardsData(initGame);
         }
 
-        function speakText(text) {
-            const synth = window.speechSynthesis;
-            synth.cancel();
+function speakText(text) {
+    const synth = window.speechSynthesis;
 
-            const readText = () => {
-                const voices = synth.getVoices();
-                let voice = voices.find(v => v.lang === 'en-US');
+    // Cancela qualquer síntese anterior
+    synth.cancel();
 
-                if (!voice && !alertDisplayed) {
-                    if (voices.length === 0) {
-                        alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used, which may cause problems.");
-                    } else {
-                        alert("No 'en-US' voice found. Using default voice instead.");
-                    }
-                    alertDisplayed = true;
-                }
+    // Função para verificar vozes e realizar a leitura
+    const readText = () => {
+        const voices = synth.getVoices();
+        let voice = voices.find(v => v.lang === 'en-US');
 
-                const utterance = new SpeechSynthesisUtterance(text);
-                utterance.lang = 'en-US';
-                if (voice) {
-                    utterance.voice = voice;
-                }
-
-                synth.speak(utterance);
-            };
-
-            if (synth.getVoices().length === 0) {
-                synth.onvoiceschanged = () => {
-                    readText();
-                };
+        // Caso não encontre a voz "en-US"
+        if (!voice && !alertDisplayed) {
+            if (voices.length === 0) {
+                alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used, which may cause problems.");
             } else {
-                readText();
+                alert("No 'en-US' voice found. Using default voice instead.");
             }
+            alertDisplayed = true; // Marca a mensagem como exibida
         }
+
+        // Configura o texto para leitura
+        const utterance = new SpeechSynthesisUtterance(text);
+        utterance.lang = 'en-US'; // Força o idioma inglês americano
+        if (voice) {
+            utterance.voice = voice;
+        }
+
+        // Realiza a leitura
+        synth.speak(utterance);
+    };
+
+    // Verifica se as vozes já estão carregadas
+    if (synth.getVoices().length === 0) {
+        // Adiciona evento para aguardar o carregamento das vozes
+        synth.onvoiceschanged = () => {
+            readText();
+        };
+    } else {
+        // Caso as vozes já estejam disponíveis
+        readText();
+    }
+}
 
         loadCardsData(initGame);
         window.addEventListener('resize', adjustFontSize);
