--- a/Atividades/HannahVideo/index - Copy.html
+++ b/Atividades/HannahVideo/index - Copy.html
@@ -277,7 +277,7 @@
                     if (progress[nextFaseKey]) {
                         window.history.back();
                     } else {
-                        const confirmNavigation = confirm("The current phase has not been completed. Are you sure you want to leave?");
+                        const confirmNavigation = confirm("The next phase is locked. Do you still want to go back?");
                         if (confirmNavigation) {
                             window.history.back();
                         }
