--- a/Atividades/Exerciciosdegramatica2/index.html
+++ b/Atividades/Exerciciosdegramatica2/index.html
@@ -363,7 +363,7 @@
                     if (progress[nextFaseKey]) {
                         window.history.back();
                     } else {
-                        const confirmNavigation = confirm("The next phase is locked. Do you still want to go back?");
+                        const confirmNavigation = confirm("The current phase has not been completed. Are you sure you want to leave?");
                         if (confirmNavigation) {
                             window.history.back();
                         }
