--- a/Atividades/Dialogo/index.html
+++ b/Atividades/Dialogo/index.html
@@ -264,7 +264,7 @@
                 console.log(`Next phase (fase${nextPhase}) is unlocked. Navigating back.`);
                 window.history.back(); // Retorna para a página anterior
             } else {
-                const confirmNavigation = confirm("The next phase is not unlocked yet. Do you still want to go back?");
+                const confirmNavigation = confirm("The current phase has not been completed. Are you sure you want to leave?");
                 if (confirmNavigation) {
                     window.history.back(); // Retorna para a página anterior
                 } else {
