--- a/painel_professor.html
+++ b/painel_professor.html
@@ -5,7 +5,7 @@
   <title>Teacher Dashboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
+ <style>
     body {
       font-family: 'Poppins', sans-serif;
       background-image: url('imagens/fundo.png');
@@ -103,6 +103,10 @@
       border: 1px solid #ddd;
       border-radius: 5px;
       background-color: #f9f9f9;
+      position: relative;
+      z-index: 1000;
+      max-height: 70vh;
+      overflow-y: auto;
     }
 
     .inactive {
@@ -225,7 +229,16 @@
     .close-button:hover {
       background-color: rgba(0, 0, 0, 0.7);
     }
-  </style>
+
+    /* Novo: Estilo para as unidades expandidas */
+    [id^="student-"][id$="-Unit"] {
+      background-color: white;
+      padding: 10px;
+      margin-top: 5px;
+      border-radius: 5px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+</style>
 </head>
 <body>
   <div class="back-container">
