--- a/painel_professor.html
+++ b/painel_professor.html
@@ -555,7 +555,7 @@
     }
 
     // Função para mostrar/ocultar progresso
-   function toggleProgress(teacherId, classId, studentId) {
+  function toggleProgress(teacherId, classId, studentId) {
   const progressContainer = document.getElementById(`progress-container-${studentId}`);
   
   if (progressContainer.style.display === 'none' || progressContainer.style.display === '') {
@@ -598,7 +598,9 @@
               if (levelKey === 'Level0') {
                 phaseKey = `fase${phaseNumber}`;
               } else {
-                phaseKey = `fase${prefix}${(parseInt(unitNum) - 1) * 30 + phaseNumber}`;
+                // Correção aqui: calcular o número da fase corretamente
+                const phaseNum = start + (parseInt(unitNum) - 1) * 30 + (phaseNumber - 1);
+                phaseKey = `fase${phaseNum}`;
               }
 
               const isComplete = unitSnap.child(phaseKey).val() || false;
