--- a/painel_professor.html
+++ b/painel_professor.html
@@ -573,19 +573,19 @@
 
         // Estrutura corrigida para todos os níveis
         const levels = {
-          Level0: { start: 1, prefix: '' },
-          Level1: { start: 1001, prefix: '1' },
-          Level2: { start: 2001, prefix: '2' },
-          Level3: { start: 3001, prefix: '3' },
-          Level4: { start: 4001, prefix: '4' }
+          Level0: { start: 1, unitOffset: 0 },
+          Level1: { start: 1001, unitOffset: 0 },
+          Level2: { start: 2001, unitOffset: 0 },
+          Level3: { start: 3001, unitOffset: 0 },
+          Level4: { start: 4001, unitOffset: 0 }
         };
 
         Object.keys(levels).forEach(levelKey => {
-          const { start, prefix } = levels[levelKey];
+          const { start } = levels[levelKey];
           progressHTML += `<div class="level-container"><h4>${levelKey}</h4>`;
 
           Object.keys(structure[levelKey]).forEach(unitKey => {
-            const unitNum = unitKey.replace('Unit', '');
+            const unitNum = parseInt(unitKey.replace('Unit', ''));
             const totalPhases = structure[levelKey][unitKey];
             const unitSnap = snapshot.child(`${levelKey}/${unitKey}`);
             
@@ -598,8 +598,8 @@
               if (levelKey === 'Level0') {
                 phaseKey = `fase${phaseNumber}`;
               } else {
-                // Correção aqui: calcular o número da fase corretamente
-                const phaseNum = start + (parseInt(unitNum) - 1) * 30 + (phaseNumber - 1);
+                // Cálculo correto do número da fase
+                const phaseNum = start + ((unitNum - 1) * 30) + (phaseNumber - 1);
                 phaseKey = `fase${phaseNum}`;
               }
 
