--- a/painel_professor.html
+++ b/painel_professor.html
@@ -616,13 +616,16 @@
               `;
             }
 
+            // MODIFICAÇÃO AQUI: Incluímos o levelKey no ID da unidade para torná-lo único
+            const uniqueUnitId = `${studentId}-${levelKey}-${unitKey}`;
+            
             progressHTML += `
               <div>
-                <div class="unit-header" onclick="toggleVisibility('${studentId}-${unitKey}')">
+                <div class="unit-header" onclick="toggleVisibility('${uniqueUnitId}')">
                   <span>${unitKey}</span>
                   <span>${completedPhases}/${totalPhases} completed</span>
                 </div>
-                <div id="${studentId}-${unitKey}" style="display: none; margin-top: 10px; padding: 10px;">
+                <div id="${uniqueUnitId}" style="display: none; margin-top: 10px; padding: 10px;">
                   ${phasesHTML}
                 </div>
               </div>
@@ -718,9 +721,11 @@
 
     // Função para mostrar/ocultar unidades
     function toggleVisibility(unitId) {
-      const unitDiv = document.getElementById(unitId);
-      unitDiv.style.display = unitDiv.style.display === 'none' ? 'block' : 'none';
-    }
+  const unitDiv = document.getElementById(unitId);
+  if (unitDiv) {
+    unitDiv.style.display = unitDiv.style.display === 'none' ? 'block' : 'none';
+  }
+}
 
     // Carregar avatar quando selecionado
     document.getElementById('teacher-avatar').addEventListener('change', function() {
