--- a/Atividades/TestwordB2CFacil/index.html
+++ b/Atividades/TestwordB2CFacil/index.html
@@ -452,6 +452,13 @@ function createActivity(imageUrl, word) {
     wordInput.placeholder = "Type the word here";
     wordContainer.appendChild(wordInput);
     
+// Exibe a palavra completa
+    const fullWordElement = document.createElement('div');
+    fullWordElement.innerText = word.toUpperCase();
+    fullWordElement.style.fontWeight = 'bold';
+    fullWordElement.style.marginTop = '10px';
+    wordContainer.appendChild(fullWordElement);
+
     activityDiv.appendChild(wordContainer);
     activityContainer.appendChild(activityDiv);
 }
