--- a/painel_professor.html
+++ b/painel_professor.html
@@ -338,12 +338,37 @@
 
     // Estrutura completa dos níveis e unidades
     const structure = {
-      Level0: { Unit1: 30, Unit2: 30, Unit3: 30, Unit4: 30, Unit5: 30, Unit6: 30, Unit7: 30, Unit8: 30, Unit9: 30, Unit10: 30 },
-      Level1: { Unit1: 30, Unit2: 30, Unit3: 30, Unit4: 30, Unit5: 30, Unit6: 30, Unit7: 30, Unit8: 30, Unit9: 30, Unit10: 30 },
-      Level2: { Unit1: 30, Unit2: 30, Unit3: 30, Unit4: 30, Unit5: 30, Unit6: 30, Unit7: 30, Unit8: 30, Unit9: 30, Unit10: 30 },
-      Level3: { Unit1: 30, Unit2: 30, Unit3: 30, Unit4: 30, Unit5: 30, Unit6: 30, Unit7: 30, Unit8: 30, Unit9: 30, Unit10: 30 },
-      Level4: { Unit1: 30, Unit2: 30, Unit3: 30, Unit4: 30, Unit5: 30, Unit6: 30, Unit7: 30, Unit8: 30, Unit9: 30, Unit10: 30 }
-    };
+  Level0: { 
+    Unit1: 25, Unit2: 25, Unit3: 25, Unit4: 25, Unit5: 25, 
+    Unit6: 25, Unit7: 25, Unit8: 25, Unit9: 25, Unit10: 25,
+    Unit11: 25, Unit12: 25, Unit13: 25, Unit14: 25, Unit15: 25,
+    Unit16: 25, Unit17: 25, Unit18: 25, Unit19: 25, Unit20: 25
+  },
+  Level1: { 
+    Unit1: 37, Unit2: 37, Unit3: 37, Unit4: 37, Unit5: 37, 
+    Unit6: 37, Unit7: 37, Unit8: 37, Unit9: 37, Unit10: 37,
+    Unit11: 37, Unit12: 37, Unit13: 37, Unit14: 37, Unit15: 37,
+    Unit16: 37, Unit17: 37, Unit18: 37, Unit19: 37, Unit20: 37
+  },
+  Level2: { 
+    Unit1: 37, Unit2: 37, Unit3: 37, Unit4: 37, Unit5: 37, 
+    Unit6: 37, Unit7: 37, Unit8: 37, Unit9: 37, Unit10: 37,
+    Unit11: 37, Unit12: 37, Unit13: 37, Unit14: 37, Unit15: 37,
+    Unit16: 37, Unit17: 37, Unit18: 37, Unit19: 37, Unit20: 37
+  },
+  Level3: { 
+    Unit1: 37, Unit2: 37, Unit3: 37, Unit4: 37, Unit5: 37, 
+    Unit6: 37, Unit7: 37, Unit8: 37, Unit9: 37, Unit10: 37,
+    Unit11: 37, Unit12: 37, Unit13: 37, Unit14: 37, Unit15: 37,
+    Unit16: 37, Unit17: 37, Unit18: 37, Unit19: 37, Unit20: 37
+  },
+  Level4: { 
+    Unit1: 37, Unit2: 37, Unit3: 37, Unit4: 37, Unit5: 37, 
+    Unit6: 37, Unit7: 37, Unit8: 37, Unit9: 37, Unit10: 37,
+    Unit11: 37, Unit12: 37, Unit13: 37, Unit14: 37, Unit15: 37,
+    Unit16: 37, Unit17: 37, Unit18: 37, Unit19: 37, Unit20: 37
+  }
+};
 
     // Função para carregar dados do professor
     function loadTeacherData(teacherId) {
