--- a/Atividades/Fill in the Blanks/index.html
+++ b/Atividades/Fill in the Blanks/index.html
@@ -255,6 +255,7 @@
 
         firebase.initializeApp(firebaseConfig);
 
+        let completedQuestions = [];
         let currentQuestion = 1;
         let questionsData = [];
         let correctAnswers = [];
@@ -398,7 +399,7 @@
     });
 
     if (allCorrect) {
-        answeredQuestions++;
+        completedQuestions[currentQuestion - 1] = true;
         checkCompletion();
         document.getElementById('successContainer').style.display = 'block';
         document.getElementById('successContainer').scrollIntoView({ behavior: 'smooth' });
@@ -413,9 +414,9 @@
 }
 
         function checkCompletion() {
-            if (answeredQuestions === totalQuestions) {
-                markActivityAsCompleted();
-            }
+           if (completedQuestions.length === totalQuestions && completedQuestions.every(Boolean)) {
+    markActivityAsCompleted();
+}
         }
 
         function markActivityAsCompleted() {
