--- a/index.html
+++ b/index.html
@@ -541,5 +541,13 @@ document.addEventListener("DOMContentLoaded", function() {
       speechSynthesis.cancel();
     });    
   </script>
+<!-- REGISTRO DO SERVICE WORKER -->
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(reg => console.log('✅ Service Worker registrado:', reg))
+      .catch(err => console.error('❌ Falha ao registrar Service Worker:', err));
+  }
+</script>
 </body>
 </html>
